Update styles and fix scrolling issue

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <h1>HackKU 2025</h1>
-    <h2>coming soon...</h2>
-    <a href="/">Register Here</a>
-    <a href="/">Discord</a>
+    <h3>full site coming soon...</h3>
+
+    <a href="https://discord.gg/crcQ7uTvrk" target="_blank"
+      >join the discord!</a
+    >
+    <a>registration form coming soon</a>
     <a href="https://mlh.io/" target="_blank"
       ><img
         id="mlh-trust-badge"
