add countdown timer and simp,ify design

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>HackKU 2025</title>
   </head>
   <body>
-    <h1>HackKU 2025</h1>
-    <h3>full site coming soon...</h3>
+    <h1 id="countdown">loading countdown...</h1>
+    <p style="margin-top: 0">until <b>HackKU 2025</b></p>
+    <script></script>
 
-    <a href="https://discord.gg/crcQ7uTvrk" target="_blank"
-      >join the discord!</a
-    >
-    <a>registration form coming soon</a>
+    <div class="links">
+      <a>register</a>
+      -
+      <a href="https://discord.gg/crcQ7uTvrk" target="_blank">discord server</a>
+    </div>
     <a href="https://mlh.io/" target="_blank"
       ><img
         id="mlh-trust-badge"
@@ -22,6 +24,6 @@
         height="15%"
     /></a>
 
-    <script src="script.js"></script>
+    <script src="countdown.js"></script>
   </body>
 </html>
