add fade in animation

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>HackKU 2025</title>
   </head>
   <body>
-    <h1 id="countdown">loading countdown...</h1>
+    <h1 id="countdown">314d 22h 56m 38s</h1>
     <p style="margin-top: 0">until <b>HackKU 2025</b></p>
     <script></script>
 
     <div class="links">
-      <a>register</a>
-      -
-      <a href="https://discord.gg/crcQ7uTvrk" target="_blank">discord server</a>
+      <a>register now</a>
+      and
+      <a href="https://discord.gg/crcQ7uTvrk" target="_blank"
+        >join our discord</a
+      >
     </div>
     <a href="https://mlh.io/" target="_blank"
       ><img
