--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HackKU 2025</title>
   </head>
   <body>
+
     <h1 id="countdown">314d 22h 56m 38s</h1>
     <p style="margin-top: 0">until <b>HackKU 2025</b></p>
     <script></script>
@@ -18,6 +19,18 @@
         >join our discord</a
       >
     </div>
+
+    <br>
+    
+    <div class="links" id="socials">
+      Follow us on 
+      <a href="https://www.instagram.com/thehackku/" target="_blank">Instagram</a>
+      and
+      <a href="https://github.com/the-hackku" target="_blank"
+        >Github</a
+      >
+    </div>
+
     <a href="https://mlh.io/" target="_blank"
       ><img
         id="mlh-trust-badge"
