--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
 
+    <div id="navigation-bar">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="register.html" class="nav-link">Register</a>
+      <a href="about.html" class="nav-link">About</a>
+    </div>
+
     <h1 id="countdown">314d 22h 56m 38s</h1>
     <p style="margin-top: 0">until <b>HackKU 2025</b></p>
     <script></script>
