--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>About HackKU 2025</title>
   </head>
 
@@ -20,4 +20,5 @@
         <p>This page is dedicated to talk about the organizing team</p>
   </body>
 
+  <script src="countdown.js"></script>
 </html>
