--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Registration HackKU 2025</title>
   </head>
 
@@ -19,4 +19,5 @@
         <p>Once it becomes available, you can register on this page!</p>
   </body>
 
+  <script src="countdown.js"></script>
 </html>
