--- a/about.html
+++ b/about.html
@@ -18,6 +18,15 @@
         <h1>About the Team</h1>
 
         <p>This page is dedicated to talk about the organizing team</p>
+
+        <br>
+    
+        <div class="links" id="socials">
+          Follow us on 
+          <a href="https://www.instagram.com/thehackku/" target="_blank">Instagram</a>
+          and
+          <a href="https://github.com/the-hackku" target="_blank">Github</a>
+        </div>
   </body>
 
   <script src="countdown.js"></script>
