--- a/index.html
+++ b/index.html
@@ -3,47 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./static/styles.css" />
     <title>HackKU 2025</title>
   </head>
   <body>
-
-    <div id="navigation-bar">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="register.html" class="nav-link">Register</a>
-      <a href="about.html" class="nav-link">About</a>
-    </div>
-
-    <h1 id="countdown">314d 22h 56m 38s</h1>
-    <p style="margin-top: 0">until <b>HackKU 2025</b></p>
-    <script></script>
-
-    <div class="links">
-      <a>register now</a>
-      and
-      <a href="https://discord.gg/crcQ7uTvrk" target="_blank"
-        >join our discord</a
-      >
-    </div>
-
-    <br>
-    
-    <div class="links" id="socials">
-      Follow us on 
-      <a href="https://www.instagram.com/thehackku/" target="_blank">Instagram</a>
-      and
-      <a href="https://github.com/the-hackku" target="_blank"
-        >Github</a
-      >
-    </div>
-
-    <a href="https://mlh.io/" target="_blank"
+    <!-- MLH TRUST BANNER -->
+    <a href="https://mlh.io/seasons/2025/events" target="_blank"
       ><img
         id="mlh-trust-badge"
         src="./static/mlh-banner.svg"
         alt=""
         height="15%"
     /></a>
+    <!-- END OF MLH TRUST BANNER -->
+
+    <h1 id="countdown">314d 22h 56m 38s</h1>
+    <p style="margin-top: 0">until HackKU 2025</p>
+    <script></script>
+
+    <div class="links">
+      <a href="">Register</a>
+      and
+      <a href="" target="_blank">Join our Discord</a>
+    </div>
+
+    <div class="footer-nav">
+      <a href="/about.html">About</a>
+      <a href="/schedule.html">Schedule</a>
+      <a href="/rules.html">Rules</a>
+      <a href="/faq.html">FAQ</a>
+    </div>
 
     <script src="countdown.js"></script>
   </body>
