--- a/about.html
+++ b/about.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="static/styles.css" />
     <title>About HackKU 2025</title>
   </head>
 
   <body>
-      <div id="navigation-bar">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="register.html" class="nav-link">Register</a>
-        <a href="about.html" class="nav-link">About</a>
-      </div>
-  
 
         <h1>About the Team</h1>
 
@@ -26,6 +20,14 @@
           <a href="https://www.instagram.com/thehackku/" target="_blank">Instagram</a>
           and
           <a href="https://github.com/the-hackku" target="_blank">Github</a>
+        </div>
+
+        <div class="footer-nav">
+          <a href="/index.html">Home</a>
+          <a href="/about.html">About</a>
+          <a href="/schedule.html">Schedule</a>
+          <a href="/rules.html">Rules</a>
+          <a href="/faq.html">FAQ</a>
         </div>
   </body>
 
