--- a/register.html
+++ b/register.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="static/styles.css" />
     <title>Registration HackKU 2025</title>
   </head>
 
   <body>
-      <div id="navigation-bar">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="register.html" class="nav-link">Register</a>
-        <a href="about.html" class="nav-link">About</a>
-      </div>
 
         <h1>Registration</h1>
 
         <p>Once it becomes available, you can register on this page!</p>
+
+        <div class="footer-nav">
+          <a href="/index.html">Home</a>
+          <a href="/about.html">About</a>
+          <a href="/schedule.html">Schedule</a>
+          <a href="/rules.html">Rules</a>
+          <a href="/faq.html">FAQ</a>
+        </div>
   </body>
 
   <script src="countdown.js"></script>
