--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <script></script>
 
     <div class="links">
-      <a href="">Register</a>
+      <a href="/register.html">Register</a>
       and
       <a href="" target="_blank">Join our Discord</a>
     </div>
 
     <div class="footer-nav">
+      <a href="/index.html">Home</a>
       <a href="/about.html">About</a>
       <a href="/schedule.html">Schedule</a>
       <a href="/rules.html">Rules</a>
