Updated temp site
Updated temporary site with some more content into each page

--- a/about.html
+++ b/about.html
@@ -13,6 +13,15 @@
 
         <p>This page is dedicated to talk about the organizing team</p>
 
+        <p>Current people on the team:</p>
+
+        <ul>
+          <li>James Hurd</li>
+          <li>Joshua Lee</li>
+          <li>Will Whitehead</li>
+          <li>Andrew Huang</li>
+        </ul>
+
         <br>
     
         <div class="links" id="socials">
