--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,10 @@
 
         <p>This page is for Frequently Asked Questions</p>
 
+        <h3>Q1: Where can I register for HackKU?</h3>
+
+        <h3>A1: On the homepage!</h3>
+
         <div class="footer-nav">
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
