--- a/rules.html
+++ b/rules.html
@@ -13,6 +13,13 @@
 
         <p>This page is for the HackKU rules</p>
 
+        <ol>
+            <li>Be kind and respectful to everyone!</li>
+            <li>No drinking during HackKU</li>
+            <li>AI, such as ChatGPT, cannot be used to generate code</li>
+            <li>etc.</li>
+        </ol>
+
         <div class="footer-nav">
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
