--- a/schedule.html
+++ b/schedule.html
@@ -12,6 +12,7 @@
         <h1>Schedule</h1>
 
         <p>This page is for the HackKU Schedule</p>
+        <p>Potentially will be an embedded form</p>
 
         <div class="footer-nav">
           <a href="/index.html">Home</a>
