--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="footer-nav">
-          <a href="/index.html">Home</a>
+          <a href="/hackku25-website.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/schedule.html">Schedule</a>
           <a href="/rules.html">Rules</a>
