--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </div>
 
     <div class="footer-nav">
-      <a href="/hackku25-website.html">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/schedule.html">Schedule</a>
-      <a href="/rules.html">Rules</a>
-      <a href="/faq.html">FAQ</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="rules.html">Rules</a>
+      <a href="faq.html">FAQ</a>
     </div>
 
     <script src="countdown.js"></script>
