--- a/faq.html
+++ b/faq.html
@@ -18,11 +18,11 @@
         <h3>A1: On the homepage!</h3>
 
         <div class="footer-nav">
-          <a href="/index.html">Home</a>
-          <a href="/about.html">About</a>
-          <a href="/schedule.html">Schedule</a>
-          <a href="/rules.html">Rules</a>
-          <a href="/faq.html">FAQ</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="schedule.html">Schedule</a>
+          <a href="rules.html">Rules</a>
+          <a href="faq.html">FAQ</a>
         </div>
   </body>
 
