--- a/register.html
+++ b/register.html
@@ -14,11 +14,11 @@
         <p>Once it becomes available, you can register on this page!</p>
 
         <div class="footer-nav">
-          <a href="/index.html">Home</a>
-          <a href="/about.html">About</a>
-          <a href="/schedule.html">Schedule</a>
-          <a href="/rules.html">Rules</a>
-          <a href="/faq.html">FAQ</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="schedule.html">Schedule</a>
+          <a href="rules.html">Rules</a>
+          <a href="faq.html">FAQ</a>
         </div>
   </body>
 
