--- a/rules.html
+++ b/rules.html
@@ -21,11 +21,11 @@
         </ol>
 
         <div class="footer-nav">
-          <a href="/index.html">Home</a>
-          <a href="/about.html">About</a>
-          <a href="/schedule.html">Schedule</a>
-          <a href="/rules.html">Rules</a>
-          <a href="/faq.html">FAQ</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="schedule.html">Schedule</a>
+          <a href="rules.html">Rules</a>
+          <a href="faq.html">FAQ</a>
         </div>
   </body>
 
