--- a/schedule.html
+++ b/schedule.html
@@ -15,11 +15,11 @@
         <p>Potentially will be an embedded form</p>
 
         <div class="footer-nav">
-          <a href="/index.html">Home</a>
-          <a href="/about.html">About</a>
-          <a href="/schedule.html">Schedule</a>
-          <a href="/rules.html">Rules</a>
-          <a href="/faq.html">FAQ</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="schedule.html">Schedule</a>
+          <a href="rules.html">Rules</a>
+          <a href="faq.html">FAQ</a>
         </div>
   </body>
 
