--- a/about.html
+++ b/about.html
@@ -20,6 +20,9 @@
           <li>Joshua Lee</li>
           <li>Will Whitehead</li>
           <li>Andrew Huang</li>
+          <li>Trent Gould</li>
+          <li>Ky Le</li>
+          <li>Anh Hoang</li>
         </ul>
 
         <br>
