--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="links">
       <a href="/register.html">Register</a>
       and
-      <a href="" target="_blank">Join our Discord</a>
+      <a href="https://discord.gg/AJXm3k6xWq" target="_blank">Join our Discord</a>
     </div>
 
     <div class="footer-nav">
