update all graphics

--- a/index.html
+++ b/index.html
@@ -4,36 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./static/styles.css" />
-    <title>HackKU 2025</title>
+    <title>HackKU25</title>
   </head>
   <body>
     <!-- MLH TRUST BANNER -->
     <a href="https://mlh.io/seasons/2025/events" target="_blank"
-      ><img
-        id="mlh-trust-badge"
-        src="./static/mlh-banner.svg"
-        alt=""
-        height="15%"
+      ><img id="mlh-trust-badge" src="./static/mlh-banner.svg" alt=""
     /></a>
     <!-- END OF MLH TRUST BANNER -->
-    
+
+    <img class="logo-img" src="/static/assets/web_hackku25.png" alt="" />
+
     <h1 id="countdown">314d 22h 56m 38s</h1>
-    <p style="margin-top: 0">until HackKU25</p>
+    <h2>coming soon!</h2>
     <p style="margin-top: 0">April 18 - 20</p>
     <script></script>
 
-    <div class="links">
+    <!-- <div class="links">
       <a href="/register.html">Register</a>
       and
-      <a href="https://discord.gg/AJXm3k6xWq" target="_blank">Join our Discord</a>
-    </div>
+      <a href="https://discord.gg/AJXm3k6xWq" target="_blank"
+        >Join our Discord</a
+      >
+    </div> -->
+
+    <img class="seats" src="/static/assets/web_seat.png" alt="" />
 
     <div class="footer-nav">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="schedule.html">Schedule</a>
+      <a target="_blank" href="index.html">Register</a>
+      <a target="_blank" href="https://discord.gg/AJXm3k6xWq">Discord</a>
+
+      <!-- <a href="about.html">About</a> -->
+      <!-- <a href="schedule.html">Schedule</a> -->
       <a href="rules.html">Rules</a>
-      <a href="faq.html">FAQ</a>
+      <!-- <a href="faq.html">FAQ</a> -->
     </div>
 
     <script src="countdown.js"></script>
