--- a/register.html
+++ b/register.html
@@ -8,18 +8,23 @@
   </head>
 
   <body>
+    <!-- MLH TRUST BANNER -->
+    <a href="https://mlh.io/seasons/2025/events" target="_blank"
+      ><img id="mlh-trust-badge" src="./static/mlh-banner.svg" alt=""
+    /></a>
+    <!-- END OF MLH TRUST BANNER -->
 
-        <h1>Registration</h1>
+    <h1>Registration</h1>
 
-        <p>Once it becomes available, you can register on this page!</p>
+    <p>Once it becomes available, you can register on this page!</p>
 
-        <div class="footer-nav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="schedule.html">Schedule</a>
-          <a href="rules.html">Rules</a>
-          <a href="faq.html">FAQ</a>
-        </div>
+    <div class="footer-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="rules.html">Rules</a>
+      <a href="faq.html">FAQ</a>
+    </div>
   </body>
 
   <script src="countdown.js"></script>
