--- a/schedule.html
+++ b/schedule.html
@@ -8,19 +8,28 @@
   </head>
 
   <body>
+    <!-- MLH TRUST BANNER -->
+    <a href="https://mlh.io/seasons/2025/events" target="_blank"
+      ><img
+        id="mlh-trust-badge"
+        src="./static/mlh-banner.svg"
+        alt=""
+        height="15%"
+    /></a>
+    <!-- END OF MLH TRUST BANNER -->
 
-        <h1>Schedule</h1>
+    <h1>Schedule</h1>
 
-        <p>This page is for the HackKU Schedule</p>
-        <p>Potentially will be an embedded form</p>
+    <p>This page is for the HackKU Schedule</p>
+    <p>Potentially will be an embedded form</p>
 
-        <div class="footer-nav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="schedule.html">Schedule</a>
-          <a href="rules.html">Rules</a>
-          <a href="faq.html">FAQ</a>
-        </div>
+    <div class="footer-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="rules.html">Rules</a>
+      <a href="faq.html">FAQ</a>
+    </div>
   </body>
 
   <script src="countdown.js"></script>
