--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <a href="index.html">Home</a>
       <a target="_blank" href="index.html">Register</a>
       <a target="_blank" href="https://discord.gg/AJXm3k6xWq">Discord</a>
+      <a target="_blank" href="https://www.instagram.com/thehackku/">Instagram</a>
 
       <!-- <a href="about.html">About</a> -->
       <!-- <a href="schedule.html">Schedule</a> -->
