--- a/rules.html
+++ b/rules.html
@@ -85,7 +85,7 @@
     </p>
 
     <br /><br />
-    <a href="/">< Back</a>
+    <a href="/"> Back</a>
   </body>
 
   <script src="countdown.js"></script>
