--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <img class="logo-img" src="/static/assets/web_hackku25.png" alt="" />
 
-    <h1 id="countdown">314d 22h 56m 38s</h1>
-    <h2>coming soon!</h2>
-    <p style="margin-top: 0">April 18 - 20</p>
-    <script></script>
+    <div id="index-content">
+      <h1 id="countdown" class="index-text">314d 22h 56m 38s</h1>
+      <h2 class="index-text">coming soon!</h2>
+      <p class="index-text" style="margin-top: 0">April 18 - 20</p>
+      <script></script>
+    </div>
 
     <!-- <div class="links">
       <a href="/register.html">Register</a>
