update mobile view and fix css

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
     <!-- MLH TRUST BANNER -->
-    <a href="https://mlh.io/seasons/2025/events" target="_blank"
-      ><img id="mlh-trust-badge" src="./static/mlh-banner.svg" alt=""
-    /></a>
+    <a href="https://mlh.io/seasons/2025/events" target="_blank">
+      <img id="mlh-trust-badge" src="./static/mlh-banner.svg" alt="" />
+    </a>
     <!-- END OF MLH TRUST BANNER -->
 
-    <img class="logo-img" src="/static/assets/web_hackku25.png" alt="" />
+    <div id="main-content">
+      <img class="logo-img" src="/static/assets/web_hackku25.png" alt="" />
 
-    <div id="index-content">
-      <h1 id="countdown" class="index-text">314d 22h 56m 38s</h1>
-      <h2 class="index-text">coming soon!</h2>
-      <p class="index-text" style="margin-top: 0">April 18 - 20</p>
-      <script></script>
+      <div id="index-content">
+        <h1 id="countdown">314d 22h 56m 38s</h1>
+        <p class="coming-soon">coming soon!</p>
+        <p class="event-date">April 18 - 20</p>
+        <script></script>
+      </div>
     </div>
 
     <!-- <div class="links">
@@ -34,15 +36,13 @@
     <img class="seats" src="/static/assets/web_seat.png" alt="" />
 
     <div class="footer-nav">
-      <a href="index.html">Home</a>
-      <a target="_blank" href="index.html">Register</a>
-      <a target="_blank" href="https://discord.gg/AJXm3k6xWq">Discord</a>
-      <a target="_blank" href="https://www.instagram.com/thehackku/">Instagram</a>
+      <a target="_blank" href="index.html">register</a>
+      <a target="_blank" href="https://discord.gg/AJXm3k6xWq">discord</a>
+      <a target="_blank" href="https://www.instagram.com/thehackku/"
+        >Instagram</a
+      >
 
-      <!-- <a href="about.html">About</a> -->
-      <!-- <a href="schedule.html">Schedule</a> -->
-      <a href="rules.html">Rules</a>
-      <!-- <a href="faq.html">FAQ</a> -->
+      <a href="rules.html">rules</a>
     </div>
 
     <script src="countdown.js"></script>
