fix broken mobile view

--- a/index.html
+++ b/index.html
@@ -25,18 +25,10 @@
       </div>
     </div>
 
-    <!-- <div class="links">
-      <a href="/register.html">Register</a>
-      and
-      <a href="https://discord.gg/AJXm3k6xWq" target="_blank"
-        >Join our Discord</a
-      >
-    </div> -->
-
     <img class="seats" src="/static/assets/web_seat.png" alt="" />
 
     <div class="footer-nav">
-      <a target="_blank" href="index.html">register</a>
+      <a target="_blank" href="https://forms.gle/tqY8QVDt93Q6TF1t5">register</a>
       <a target="_blank" href="https://discord.gg/AJXm3k6xWq">discord</a>
       <a target="_blank" href="https://www.instagram.com/thehackku/"
         >Instagram</a
