Update rules.html to improve code of conduct section

--- a/rules.html
+++ b/rules.html
@@ -3,26 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="static/styles.css" /> -->
+    <link rel="icon" href="static/assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="static/rules.css" />
+
     <title>Rules HackKU 2025</title>
   </head>
 
   <body>
-    <!--
-        <h1>Rules</h1>
-
-        <p>This page is for the HackKU rules</p>
-
-        <ol>
-            <li>Be kind and respectful to everyone!</li>
-            <li>No drinking during HackKU</li>
-            <li>AI, such as ChatGPT, cannot be used to generate code</li>
-            <li>etc.</li>
-        </ol>-->
-
     <h1 id="rules-title" class="code-title">Code of Conduct</h1>
     <p class="code-paragraph">
-      By attending HackKU, you agree to abide by the following Code of Conduct.
+      By attending HackKU 2025, you agree to abide by the following Code of
+      Conduct.
     </p>
     <ul class="code-list">
       <li class="code-item">
@@ -70,8 +61,10 @@
 
     <div id="warning-box">
       <p style="color: rgb(163, 6, 6)" class="code-paragraph">
-        Failure to comply with any part of the above-stated Code of Conduct may
-        result in disqualification and/or removal from the event.
+        <u>
+          Failure to comply with any part of the above-stated Code of Conduct
+          may result in disqualification and/or removal from the event.</u
+        >
       </p>
     </div>
 
@@ -85,7 +78,7 @@
     </p>
 
     <br /><br />
-    <a href="/"> Back</a>
+    <a href="/"> Home</a>
   </body>
 
   <script src="countdown.js"></script>
